# rstempel

./: .gitignore  Cargo.toml  LICENSE-EGOTHOR.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
examples/: generate.rs  stem_embedded.rs  stem_external.rs  stem_java.rs  stem_rust.rs
rstempel-wasm/: Cargo.toml  index.js  package-lock.json  package.json
rstempel-wasm/src/: lib.rs
src/: diff.rs  egothor.rs  lib.rs  multitrie.rs  serialize.rs  trie.rs
src/embedded/: generate.rs  mod.rs
src/java/: diff.rs  mod.rs  multitrie.rs  trie.rs
src/rust/: generate.rs  mod.rs
src/tables/: stemmer_2000.out.rs  stemmer_2000.rs
