[package]
name = "rstempel"
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "BSD-4-Clause AND BSD-2-Clause AND Apache-2.0"
exclude = [".*"]
readme = "README.md"
repository = "https://github.com/mattico/rstempel"

[[example]]
name = "generate"
required-features = ["generate"]

[[example]]
name = "stem_java"
required-features = ["java"]

[[example]]
name = "stem_rust"
required-features = ["rust", "rust_embedded_stempel"]

[dependencies]
byteorder = { version = "1.4.3", optional = true }
cesu8 = { version = "1.1.0", optional = true }

[dev-dependencies]
flate2 = "1.0.25"

[features]
default = ["rust", "rust_embedded_stempel"]
# Enables the stemmer which loads serialized stemming tables from the Java version of stempel.
java = ["byteorder", "cesu8"]
# Enables the stemmer which loads stemming tables converted to Rust code.
rust = []
# Enables the `rstempel::rust::generate` module, which generates Rust stemming tables from Java tables.
generate = ["java", "rust"]
# Embedds a stemmer table converted from stemmer_2000.out from the stempel project. Approximately 240kiB.
rust_embedded_stempel = ["rust"]
