[package]
name = "rstempel"
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "BSD-4-Clause AND BSD-2-Clause AND Apache-2.0"
exclude = [".*"]
readme = "README.md"
repository = "https://github.com/mattico/rstempel"

[workspace]
members = ["rstempel-wasm"]

[profile.release]
lto = "fat"

[[example]]
name = "generate"
required-features = ["generate"]

[[example]]
name = "stem_external"
required-features = ["external"]

[[example]]
name = "stem_embedded"
required-features = ["embedded", "table_2000"]

[dependencies]
byteorder = { version = "1.4.3", optional = true }
cesu8 = { version = "1.1.0", optional = true }

[dev-dependencies]
flate2 = "1.0.25"

[features]
default = ["embedded", "table_2000"]
# Enables the stemmer which loads serialized stemming tables from external files.
external = ["byteorder", "cesu8"]
# Enables the stemmer which uses embedded stemming tables converted to Rust code.
embedded = []
# Enables the `rstempel::embedded::generate` module, which generates Rust stemming tables from external files.
generate = ["external", "embedded"]
# Embeds a stemmer table converted from stemmer_2000.out from the stempel project. Approximately 240kiB.
table_2000 = ["embedded"]
